--- a/SpaUserControl.Tests/SpaUserControl.Tests.csproj
+++ b/SpaUserControl.Tests/SpaUserControl.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DDD\SpaUserControl.Domain.csproj" />
+    <ProjectReference Include="..\SpaUserControl.Common\SpaUserControl.Common.csproj" />
   </ItemGroup>
 
 </Project>
