--- a/SpaUserControl.Tests/SpaUserControl.Tests.csproj
+++ b/SpaUserControl.Tests/SpaUserControl.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DDD\SpaUserControl.Domain.csproj" />
+    <ProjectReference Include="..\SpaUserControl.Domain\SpaUserControl.Domain.csproj" />
     <ProjectReference Include="..\SpaUserControl.Common\SpaUserControl.Common.csproj" />
   </ItemGroup>
 
